# PeripheralMode

./: CMakeLists.txt  ai-classifier-bridge.js  geolocation.js  gps_pd_bridge.js  index.html  index.pd  pd4web.js  pd4web.wasm
Pd4Web/: externals.cpp  versions.yml
Pd4Web/pure-data/src/: s_inter.c
WebPatch/: index.html  manifest.json  pd4web.js  pd4web.wasm
WebPatch/Pd4Web/: config.h
